Fixed broken vertical layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,25 +4,15 @@ html, body {
 }
 
 body {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* !Important to override ChakraUI default styling*/
   background-color: #E9EAEC !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 main {
-  display: flex;
-  flex-direction: column;
+  /* !Important to override ChakraUI default styling*/
+  display: flex !important;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
